# bap-qemu

./: README.md  configure  meson.build  meson_options.txt  qemu-options.hx  tracewrap.c
accel/tcg/: cpu-exec.c
block/: curl.c
include/: trace_consts.h  tracewrap.h
linux-user/: main.c  signal.c  syscall.c
linux-user/aarch64/: trace_info.h
linux-user/i386/: trace_info.h
linux-user/ppc/: trace_info.h
linux-user/sh4/: trace_info.h
linux-user/x86_64/: trace_info.h
protobuf/: fix_proto_src.py  meson.build
protobuf/raw/: meson.build
qobject/: block-qdict.c
scripts/: qemu-version.sh
softmmu/: vl.c
trace/: trace_info.h.in
util/: fdmon-io_uring.c
